--- a/client/lib/l10n/app_ko.arb
+++ b/client/lib/l10n/app_ko.arb
@@ -179,5 +179,26 @@
   "dbCiphertexts": "\uc554\ud638\ubb38",
   "dbHexPrefix": "16\uc9c4\uc218 \uc811\ub450\uc5b4",
   "dbRelatedData": "\uad00\ub828 \ub370\uc774\ud130",
-  "dbSelectTablePrompt": "\ud14c\uc774\ube14\uc744 \uc120\ud0dd\ud558\uc5ec \ud589\uc744 \ud0d0\uc0c9\ud558\uc138\uc694"
+  "dbSelectTablePrompt": "\ud14c\uc774\ube14\uc744 \uc120\ud0dd\ud558\uc5ec \ud589\uc744 \ud0d0\uc0c9\ud558\uc138\uc694",
+
+  "individualEnroll": "\uac1c\ubcc4 \ub4f1\ub85d",
+  "bulkEnrollTab": "\uc77c\uad04 \ub4f1\ub85d",
+  "galleryTab": "\uac24\ub7ec\ub9ac",
+  "leftEye": "\uc67c\ucabd \ub208",
+  "rightEye": "\uc624\ub978\ucabd \ub208",
+  "loadFromDisk": "\ud30c\uc77c \uc120\ud0dd",
+  "notApplicable": "N/A",
+  "atLeastOneEyeRequired": "\ucd5c\uc18c \ud55c\ucabd \ub208 \uc774\ubbf8\uc9c0\uac00 \ud544\uc694\ud569\ub2c8\ub2e4",
+  "segmentationFailed": "\ud64d\ucc44\ub97c \ucc3e\uc744 \uc218 \uc5c6\uc2b5\ub2c8\ub2e4. \ub354 \ub098\uc740 \ud488\uc9c8\uc758 \uc774\ubbf8\uc9c0\ub97c \uc120\ud0dd\ud574 \uc8fc\uc138\uc694.",
+  "duplicateUserDetected": "\uc911\ubcf5 \uac10\uc9c0: {name}(\uc73c)\ub85c \uc774\ubbf8 \ub4f1\ub85d\ub428",
+  "enrollSuccess": "\ub4f1\ub85d \uc131\uacf5 ({count}\uac1c \ud15c\ud50c\ub9bf)",
+  "selectLocalDirectory": "\ub514\ub809\ud1a0\ub9ac \uc120\ud0dd",
+  "localBulkEnroll": "\ub85c\uceec \ub514\ub809\ud1a0\ub9ac",
+  "serverBulkEnroll": "\uc11c\ubc84 \ub370\uc774\ud130\uc14b",
+  "scanningDirectory": "\ub514\ub809\ud1a0\ub9ac \uc2a4\uce94 \uc911...",
+  "subjectsFound": "{count}\uba85 \ubc1c\uacac",
+  "enrollingSubject": "{total}\uba85 \uc911 {current}\ubc88\uc9f8 \ub4f1\ub85d \uc911: {name}",
+  "localBulkComplete": "\uc644\ub8cc: {enrolled}\uac74 \ub4f1\ub85d, {duplicates}\uac74 \uc911\ubcf5, {errors}\uac74 \uc624\ub958",
+  "noSubjectsFound": "\ub514\ub809\ud1a0\ub9ac\uc5d0 \uc720\ud6a8\ud55c \ub300\uc0c1\uc774 \uc5c6\uc2b5\ub2c8\ub2e4",
+  "startEnroll": "\ub4f1\ub85d \uc2dc\uc791"
 }
